--- a/style.less
+++ b/style.less
@@ -2410,6 +2410,13 @@ body .main .ufld_icon_links {
         }
 
     }
+	
+	.widget_plugin_evo_Arch ul {
+		text-align: left;
+		li a {
+			font-size: 100%;
+		}
+	}
 
     .widget_core_coll_longdesc, .widget_core_user_tools {
         h2 {
