--- a/style.less
+++ b/style.less
@@ -1407,7 +1407,8 @@ svg {
 /* Photo Index Widget */
 
 .widget_core_coll_media_index {
-
+	clear: both;
+	
     h2 {
         color: @primarycolor;
         margin: 0em 0 0.4em;
