--- a/style.less
+++ b/style.less
@@ -2476,7 +2476,80 @@ body .main .ufld_icon_links {
 }
 
 
-
+	// Universal item list:
+	div.widget_core_coll_item_list, div.widget_core_coll_post_list {
+		// We want to display the first image cleanly before the title
+		// This may need further tweaking...
+		&.evo_1pic__special {
+			ul {
+				padding: 0;
+				margin-left: 0;
+			}
+			li {
+				clear: both;
+				list-style: none;
+				height: 85px;
+				margin: 5px 0;
+				padding: 0;
+			}
+			div.item_first_image {
+				float: left; 
+				margin-right: 6px;
+			}
+			// Placeholder for item list when "Attached first image" selected, but no images uploaded
+			.item_first_image_placeholder {
+				display: table;
+				text-align: center;
+				vertical-align: middle;
+				float: left;
+				height: 80px;
+				width: 80px;
+				background: #f5f5f5;
+				margin-right: 6px;
+				-webkit-border-radius: 3px;
+				-moz-border-radius: 3px;
+				-ms-border-radius: 3px;
+				-o-border-radius: 3px;
+				border-radius: 3px;
+				&:before {
+					font-family: FontAwesome;
+					display: table-cell;
+					vertical-align: middle;
+					content: '\f0f6';
+					color: #ddd;
+					font-size: 40px;
+				}
+			}
+			div.item_title {
+				vertical-align: middle;
+				height: 80px;
+				// Multiple ellipis lines - for Safari
+				display: -webkit-box;
+				display: table-cell; // Overrides -webkit-box on Mozilla & Chrome
+				-webkit-line-clamp: 3;
+				-webkit-box-orient: vertical;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}		
+			&.evo_pics {
+				div.item_images {
+					display: inline-block;
+					float: left;
+					margin: 6px 6px 0 0;
+					img {
+						margin-bottom: 6px;
+					}
+				}
+			}
+		}
+		div.item_title a {
+			font-size: 20px;
+		}
+		img {
+			margin-right: 6px;
+			border-radius: 3px;
+		}
+	}
 
 
 
