--- a/style.css
+++ b/style.css
@@ -708,14 +708,10 @@ svg {
   top: 0;
   cursor: pointer;
   z-index: 3;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
-  -webkit-transition: -webkit-transform 0.5s;
-  -moz-transition: -moz-transform 0.5s;
-  transition: transform 0.5s;
+  transition: 0.2s ease;
+  font-size: 25px !important;
+  font-family: Lucida Sans Unicode;
+  color: #333;
 }
 .view-container .widget_list .close-trigger:hover {
   -webkit-transform: scale(1.1);
@@ -723,41 +719,6 @@ svg {
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
   transform: scale(1.1);
-  -webkit-transition: -webkit-transform 0.5s;
-  -moz-transition: -moz-transform 0.5s;
-  transition: transform 0.5s;
-}
-.view-container .widget_list .close-trigger:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  height: 2px;
-  background: #666;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: roatate(45deg);
-  -ms-transform: roatate(45deg);
-  -o-transform: roatate(45deg);
-  transform: roatate(45deg);
-}
-.view-container .widget_list .close-trigger:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  height: 2px;
-  background: #666;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: roatate(-45deg);
-  -ms-transform: roatate(-45deg);
-  -o-transform: roatate(-45deg);
-  transform: roatate(-45deg);
 }
 .view-container .widget_list h4 {
   position: relative;
@@ -2865,4 +2826,11 @@ div.log_container {
 .featured_post {
   border-bottom: none;
   margin-bottom: 0em;
+}
+.widget_core_coll_featured_intro {
+  margin-bottom: 0 !important;
+}
+.main_page_wrapper h2,
+.main_page_wrapper h3 {
+  color: #448aff;
 }
