--- a/style.less
+++ b/style.less
@@ -818,8 +818,7 @@ svg {
 
         }
 
-
-
+		
             .close-trigger {
                 position: absolute;
                 width: 30px;
@@ -828,15 +827,10 @@ svg {
                 top: 0;
                 cursor: pointer;
                 z-index: 3;
-                -webkit-transform: scale(1.0);
-                -moz-transform: scale(1.0);
-                -ms-transform: scale(1.0);
-                -o-transform: scale(1.0);
-                transform: scale(1.0);
-
-                -webkit-transition: -webkit-transform 0.5s;
-                -moz-transition: -moz-transform 0.5s;
-                transition: transform 0.5s;
+				transition: 0.2s ease;
+				font-size: 25px !important;
+				font-family: Lucida Sans Unicode;
+				color: #333;
             }
             .close-trigger:hover {
                 -webkit-transform: scale(1.1);
@@ -844,46 +838,6 @@ svg {
                 -ms-transform: scale(1.1);
                 -o-transform: scale(1.1);
                 transform: scale(1.1);
-
-                -webkit-transition: -webkit-transform 0.5s;
-                -moz-transition: -moz-transform 0.5s;
-                transition: transform 0.5s;
-            }
-
-            .close-trigger:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 50%;
-                width: 100%;
-                height: 2px;
-                background: #666;
-
-                -webkit-backface-visibility: hidden;
-                backface-visibility: hidden;
-                -webkit-transform: rotate(45deg);
-                -moz-transform: roatate(45deg);
-                -ms-transform: roatate(45deg);
-                -o-transform: roatate(45deg);
-                transform: roatate(45deg);
-
-            }
-            .close-trigger:after {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 50%;
-                width: 100%;
-                height: 2px;
-                background: #666;
-
-                -webkit-backface-visibility: hidden;
-                backface-visibility: hidden;
-                -webkit-transform: rotate(-45deg);
-                -moz-transform: roatate(-45deg);
-                -ms-transform: roatate(-45deg);
-                -o-transform: roatate(-45deg);
-                transform: roatate(-45deg);
             }
 
 
@@ -3587,7 +3541,7 @@ div.action_messages, div.log_container {
     }
 }
 
-// v1.1. FIXES -> @MILOS
+// FIXES -> @MILOS
 .extended_search_form .submit {
 	font-size: 18px !important;
 	margin-top: 0em !important;
@@ -3604,4 +3558,12 @@ div.action_messages, div.log_container {
 .featured_post {
 	border-bottom: none;
 	margin-bottom: 0em;
+}
+.widget_core_coll_featured_intro {
+	margin-bottom: 0 !important;
+}
+.main_page_wrapper {
+	h2, h3 {
+		color: #448aff
+	}
 }
