--- a/style.css
+++ b/style.css
@@ -1286,8 +1286,6 @@ body .main .ufld_icon_links a {
   -webkit-transition: background 0.2s;
   -moz-transition: background 0.2s;
   transition: background 0.2s;
-  width: auto;
-  height: auto;
 }
 body .main .ufld_icon_links a:hover {
   border-radius: 50%;
@@ -2887,4 +2885,51 @@ div.log_container {
 .evo_login_dialog_standard_link a,
 .evo_login_dialog_footer {
   color: #fff;
+}
+.disp_search .widget_core_coll_search_form {
+  padding: 1em 1em 0em 1em;
+}
+.disp_search .widget_core_coll_search_form .extended_search_form .input-group {
+  width: 100% !important;
+}
+.disp_search .search_result {
+  margin: 1.5em 0;
+  padding: 1.5em;
+  background: #f7f7f7;
+  box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.6);
+}
+.disp_search .search_result .search_result_score {
+  float: right;
+}
+.disp_search .search_result .search_content_wrap {
+  margin: 0;
+}
+.disp_search .search_result .search_content_wrap .result_content {
+  margin: 1em 0;
+}
+.disp_search .search_result .search_content_wrap .search_info.dimmed {
+  display: inline-block;
+}
+.disp_search .search_result .search_content_wrap .search_info.dimmed img {
+  margin-right: 5px;
+  vertical-align: middle;
+}
+.disp_search .search_result .search_content_wrap .search_info.dimmed a {
+  margin-right: 5px;
+}
+.disp_search .search_result .search_content_wrap .search_info.dimmed .user {
+  margin-right: 0 !important;
+}
+.disp_threads .btn-toolbar {
+  background: transparent !important;
+}
+.disp_threads .btn-toolbar .btn-toolbar-title {
+  margin-right: 5px;
+}
+.disp_threads .btn-toolbar .btn-group {
+  margin: 0 !important;
+}
+.disp_threads .btn-toolbar .btn-group input {
+  background: #e7e7e7;
+  margin: 0 5px 5px 0;
 }
