--- a/style.less
+++ b/style.less
@@ -1,5 +1,22 @@
+// --------- Universal item list widget & Recent posts widget ---------
+@import "../../rsc/less/_universal_item_list_widget.module.less";
+// --------------------------------------------------------------------
 
+// ------------------- Media Index widget --------------------
+@import "../../rsc/less/_coll_media_index_widget.module.less";
+// -----------------------------------------------------------
 
+// ----------- User Avatars (User List) widget ------------
+@import "../../rsc/less/_user_avatars_widget.module.less";
+// --------------------------------------------------------
+
+// -----------------About Author widget -------------------
+@import "../../rsc/less/_about_author_widget.module.less";
+// --------------------------------------------------------
+
+// ------------- Organization Members widget -------------
+@import "../../rsc/less/_org_members_widget.module.less";
+// -------------------------------------------------------
 
 @divider: #E7E7E7;
 
@@ -516,7 +533,11 @@ big {
         text-decoration: underline;
     }
 }
-
+.evo_panel__lostpass .close {
+	padding: 0;
+	margin: 0;
+	top: 0;
+}
 
 
 svg {
@@ -698,6 +719,12 @@ svg {
         box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.4);
     }
 
+}
+
+.evo_form__login {
+	.controls, .controls .form-control {
+		width: 100%;
+	}
 }
 
 
@@ -1044,6 +1071,16 @@ svg {
 
     }
 
+}
+
+/* Recent Comments Widget */
+
+div.widget_core_coll_comment_list {
+	ul li a:hover,
+	ul li a span:hover, .user {
+		background-color: transparent !important;
+		font-weight: 400;
+	}
 }
 
 /* Common Links Widget */
@@ -1447,7 +1484,10 @@ svg {
     }
 }
 
-.disp_user .widget_core_user_links .ufld_icon_links, .disp_login .widget_core_user_links .ufld_icon_links {
+.disp_user .widget_core_user_links .ufld_icon_links,
+.disp_login .widget_core_user_links .ufld_icon_links,
+.disp_register .widget_core_user_links .ufld_icon_links,
+.disp_lostpassword .widget_core_user_links .ufld_icon_links {
     text-align: right;
     a{
         width: 40px;
@@ -1455,7 +1495,9 @@ svg {
     }
 }
 
-.disp_login .widget_core_user_links .ufld_icon_links a span:before {
+.disp_login .widget_core_user_links .ufld_icon_links a span:before,
+.disp_register .widget_core_user_links .ufld_icon_links a span:before,
+.disp_lostpassword .widget_core_user_links .ufld_icon_links a span:before {
 	color: #fff;
 }
 
@@ -2601,7 +2643,7 @@ body .main .ufld_icon_links {
        
     }
     
-    .col-lg-4:hover {
+    .col-*:hover {
         box-shadow: 0 2px 12px -1px rgba(0, 0, 0, 0.6);
 
         -webkit-transition: box-shadow 0.5s;
@@ -2609,17 +2651,15 @@ body .main .ufld_icon_links {
         transition: box-shadow 0.5s;
     }   
 
-    .col-lg-4 {
-        width: 32%;
-        margin: 0 2% 2em 0;
+    div.widget_rwd_content {
         padding: 18px;
-        display: inline-block;
         position: relative;
         background: @defaultcolor;
         box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.4);
         -webkit-transition: box-shadow 0.5s;
         -moz-transition: box-shadow 0.5s;
         transition: box-shadow 0.5s;
+		margin-top: 0;
 
         img {
             border-radius: 4px !important;
@@ -2672,47 +2712,6 @@ body .main .ufld_icon_links {
             position: relative;
             margin: 0 0 1em;
             clear: both;
-            padding-top: 1em;
-        }
-
-
-    }
-
-
-    .col-lg-4:nth-child(3n+1) {
-        margin-right: 0;
-    }
-
-
-    @media only screen and (max-width: 1200px) {
-        .col-lg-4 {
-            width: 48%;
-            margin: 0 4% 2em 0;
-        }
-
-        .col-lg-4:nth-child(2n+1) {
-            margin-right: 0;
-        }
-
-        .col-lg-4:nth-child(3n+1) {
-            margin-right: 4%;
-        }
-
-    }
-
-
-    @media only screen and (max-width: 990px) {
-        .col-lg-4 {
-            width: 100%;
-            margin: 0 0% 2em 0;
-        }
-
-        .col-lg-4:nth-child(2n+1) {
-            margin-right: 0;
-        }
-
-        .col-lg-4:nth-child(3n+1) {
-            margin-right: 0;
         }
 
 
@@ -3525,6 +3524,7 @@ div.action_messages, div.log_container {
 
 // Organization Members widget
 .widget_core_org_members {
+margin-top: 0;
     color: #333;
     img {
         width: 200px;
@@ -3571,13 +3571,12 @@ div.action_messages, div.log_container {
         @btn-background: #f7f7f7;
         @btn-background-hover: #f4f4f4;
         @btn-margin: 0.6em;
-.evo_panel__login {
+.evo_panel__login,
+.evo_panel__register,
+.evo_panel__lostpass {
 	max-width: 550px;
 	margin: 0px auto;
 	.skin-form {
-		.panel-heading .close {
-			top: -32px;
-		}
 		.form-group .control-buttons {
 			.btn-success, .btn-primary.pull-right {
 				float: none !important;
@@ -3604,7 +3603,30 @@ div.action_messages, div.log_container {
 			}
 	}
 }
-
+.evo_panel__login .panel-heading .close {
+	top: -32px;
+}
+.evo_panel__lostpass .panel-heading .close {
+	padding: 2px 16px 0;
+}
+@media only screen and (max-width: 540px) {
+	.disp_register .main input[type="text"] {
+		max-width: 250px;
+	}
+	.disp_register .main input[type="submit"] {
+		font-size: 0.8em;
+		padding: 10px;
+	}
+	.main_page_wrapper {
+		margin-left: -15px;
+		margin-right: -15px;
+	}
+}
+@media only screen and (min-width: 767px) {
+	.evo_panel__register #ffield_c input {
+		margin-left: 129px;
+	}
+}
 .evo_login_dialog_standard_link a, .evo_login_dialog_footer {
 	color: #fff;
 }
