--- a/style.less
+++ b/style.less
@@ -3565,6 +3565,9 @@ margin-top: 0;
 		color: #448aff
 	}
 }
+.disp_front .main_page_wrapper{
+	margin: auto;
+}
 .SaveButton {
 	    background: #ededed !important;
 }
